(x,y) coords instead of the confusing (col,row), range 1..8 instead of the confusing 0..7 that is used in the 2D Array

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 ﻿TODO
 ----
-- BoardState should implement MakMove()
+- Square not need x, y (Flip w/o needing x,y)
+- should ClearLegalMoves() really draw themselves?
+- implement IEnumerable for Board's Squares
+- BoardState should implement MakeMove()
 	- need to implement which pieces to Flip between boardState & previousState
 - Advanced = MiniMax()
 	- BoardState.score - currently scores how many are flipped...  Should score a state
