--- a/TODO.txt
+++ b/TODO.txt
@@ -5,5 +5,6 @@
 
 - implement IEnumerable for Board's Squares
 - change Opponent does not need to reset Board
-- can I choose Black or White when playing against Computer?
-- previousState can be a stack
+- submenus under Level to choose Black or White
+- UNDOS: previousState can be a stack
+- show Legal Moves can show number of pieces flipped
