--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,13 +1,14 @@
 ﻿TODO
 ----
+- Advanced
+	- change Turns, handle no legal Moves & end of Game
+	- calculate scores, bubble them up to determine Move
+	- find a BoardState where Advanced would make a smarter decision than Intermediate
+
 - Test Computer playing against itself
 	- 2 ComputerPlayers
 	- Loop each taking a turn and change Turns
 	- Test that Intermediate beats Beginner & Advanced beats Intermediate
-
-- Advanced
-	- change Turns, handle no legal Moves & end of Game
-	- calculate scores, bubble them up to determine Move
 
 - Expert
 	- convert code to using recursion, consider merging code with other shallower algorithms
