--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -2,6 +2,7 @@
 ----
 - Advanced
 	- change Turns, handle no legal Moves & end of Game
+		- should FlipPieces() add this to the end?  Board.ChangeTurns() would need to be reworked.
 	- calculate scores, bubble them up to determine Move
 	- find a BoardState where Advanced would make a smarter decision than Intermediate
 
