--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -2,12 +2,8 @@
 ----
 - ComputerPlayersCompete could sort/group results
 
-- show Legal Moves
-	- hot key
-	- can leave it on each time it's player's turn?
-	- can show number of pieces flipped
-
-
 - implement IEnumerable for Board's Squares
 - submenus under Level to choose Black or White
 - UNDOS: previousState can be a stack
+
+- show Legal Moves can show number of pieces flipped by Move
