--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,6 +1,7 @@
 ﻿TODO
 ----
-- Expert is broken since doing IEnumerable & speed up
+- Expert is broken since doing skipped Turn & IEnumerable & speed up
+
 - should ComputerVsComputer Tests compare total Pieces instead of Wins
 
 - submenus under Level to choose Black or White
