log "Initial Score" & "W/B->" for which is making their Turn

--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,5 +1,7 @@
 ﻿TODO
 ----
+TestLevels_Exp: Advanced (1,1) skips Human Turn
+
 - Expert is broken since doing skipped Turn & IEnumerable & speed up
 
 - should ComputerVsComputer Tests compare total Pieces instead of Wins
