--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,7 +1,7 @@
 ﻿TODO
 ----
-- Game Over should take move if Wins and not take if Loses
-	- TestLevels_Adv() Exp W->(3,4) Loses, so return -int.Max
+- TestLevel_Beg() EXPERT chooses (2,5), Human should choose (1,4) instead of (5,4) & lose 
+- TestLevel_Adv() EXPERT should score differently to get better result
 
 - Expert is broken since doing skipped Turn & IEnumerable & speed up
 
