findMinMaxScore() is where Ultimate will differ, but it exactly the same right now.

--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,10 +1,10 @@
 ﻿TODO
 ----
-- new Weighted Scores
-	- Expert changed answers
-
 - Ultimate Level
 	should recurse for all Computer choices and return final Score, but should only recurse for Opponent's best Score because we don't want to choose based on Opponent making a bad Choice
+
+- new Weighted Scores
+	- Expert/Ultimate changed answers
 
 - Skipping Turn still triggers FlipTimer, and it's confusing
 
