TODO & TURN_DEPTHs experiments

--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,8 +1,8 @@
 ﻿TODO
 ----
 - Ultimate Level
-	should recurse for all Computer choices and return final Score, but should only recurse for Opponent's best Score because we don't want to choose based on Opponent making a bad Choice
-	- AdvVsExp broke
+	- AdvVsExp Loses @ EXPERT_TURNS_DEPTH 7 & 11 but Wins @ 9
+	- Ultimate can revert to Expert recusion after x Turns if it's too slow
 
 - Skipping Turn still triggers FlipTimer, and it's confusing
 
