--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,7 +1,7 @@
 ﻿TODO
 ----
 - Ultimate Level
-	- AdvVsExp Loses @ EXPERT_TURNS_DEPTH 7 & 11 but Wins @ 9
+	- AdvVsExp Loses @ EXPERT_TURNS_DEPTH 7 & 11 but Wins @ 9 (changing TURNS_DEPTH also had bad results before ultimate Branch)
 	- Ultimate can revert to Expert recusion after x Turns if it's too slow
 
 - Skipping Turn still triggers FlipTimer, and it's confusing
