--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,6 +1,9 @@
 ﻿TODO
 ----
-- can Expert & Ultimate use Advanced for Opponent instead of just BoardScore?
+- Expert & Ultimate just use BoardScore for Opponent
+	- maybe Advanced & they can use Intermediate Scoring to do better
+	- can they use Advanced for Opponent instead of just BoardScore?
+	- can Unbeatble do true minMax of all paths for both Computer & Opponent?
 
 - Skipping Turn still triggers FlipTimer, and it's confusing
 
