--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,13 +1,6 @@
 ﻿TODO
 ----
-- Expert & Ultimate just use BoardScore for Opponent
-	- maybe Advanced & they can use Intermediate Scoring to do better
-	- can they use Advanced for Opponent instead of just BoardScore?
-	- can Unbeatble do true minMax of all paths for both Computer & Opponent?
-
-- Architecture
-	- document different ComputerPlayer Levels
-	- should I make each ComputerPlayer Level a derived Class from ComputerPlayer?
+- ComputerPlayer_Expert & ComputerPlayer_Ultimate derived from ComputerPlayer_recursive
 
 - Skipping Turn still triggers FlipTimer, and it's confusing
 
