--- a/Othello/TODO.txt
+++ b/Othello/TODO.txt
@@ -1,5 +1,7 @@
 ﻿TODO
 ----
+Profile Ultimate vs Advanced
+
 - submenus under Level to choose Black or White
 
 - show Legal Moves can show number of pieces flipped by Move
